# llm_crashcourse

./: main.py  pyproject.toml  requirements.txt
1-Basic Chatbot/: 1-basicchatbot.ipynb
2-Human Feedback/: humanintheloop.ipynb
