[project]
name = "llm-crashcourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.6",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.2",
    "langsmith>=0.4.5",
    "mcp>=1.11.0",
    "python-dotenv>=1.1.1",
]
